# gazorepkiller

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  call.js  crates.js  entrypoint.js  help.html  index.html  manifest.json  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: ci.yaml
docs/amo/: README.md
gazorepkiller/: all.html  constant.DOM_PARSE_ERR_MSG.html  constant.__wasm_bindgen_generated_killing__const.html  constant.__wasm_bindgen_generated_main__const.html  fn.killing.html  fn.main.html  index.html  macro.console_log.html  macro.gazorepkiller_console_log!.html  macro.gazorepkiller_console_log.html  sidebar-items.js
gazorepkiller/dom_util/: constant.SLEEP_MS.html  constant.WAIT_LIMIT_SEC.html  constant.__wasm_bindgen_generated_wait_dom_ready__const.html  fn.wait_dom_ready.html  index.html  sidebar-items.js
gazorepkiller/utils/: constant.__wasm_bindgen_generated_check_url_match__const.html  constant.__wasm_bindgen_generated_get_current_url__const.html  constant.__wasm_bindgen_generated_sleep_ms__const.html  fn.check_url_match.html  fn.get_current_url.html  fn.sleep.html  fn.sleep_ms.html  index.html  sidebar-items.js
gazorepkiller/walker/: constant.__wasm_bindgen_generated_search_and_kill__const.html  fn.search_and_kill.html  index.html  sidebar-items.js  trait.TweetArticleSearcher.html  type.TweetArticle.html
search.desc/gazorepkiller/: gazorepkiller-desc-0-.js
src/: dom_util.rs  lib.rs  utils.rs  walker.rs
src/dom_util/: console.rs  reply_tree.rs
src/gazorepkiller/: dom_util.rs.html  lib.rs.html  (+2 more)
(+23 files in other folders)
